tdf#167378: handle css::bridge::oleautomation::Date in CellValueSetter

Commit 63e7a70ad1a6a8ec4190ab510f683d2fc9dea417 (tdf#164811: swap the
"if IsCompatibility()" branches to match other places, 2025-01-23)
made dates be passed as oleautomation::Date in VBA compatibility
mode. These values were handled in CellValueGetter::processValue; but
CellValueSetter::processValue lacked similar handling. This change
fixes the omission.

Change-Id: I8e97792f2014f16bf9a7520fcb6c46848d9fa938
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187393
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit e90e4b81b049a9d7c36de8d7f0371e2da7c60c01)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187409
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit cafcc93ebea48565ba589578dff2617630b2eff4)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187465
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Tested-by: Michael Weghorn <m.weghorn@posteo.de>
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>